added parsing function to display the last time an item was updated

--- a/inventory-js/index.html
+++ b/inventory-js/index.html
@@ -18,9 +18,15 @@
         </div>
         <div class="container" id="categories-list">
 
+
+
+
+
+
         </div>
     </main>
 
+    <script src="src/parseDate.js"></script>
     <script src="src/item.js"></script>
     <script src="src/category.js"></script>
     <script src="src/index.js"></script>
